k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verisphere
  labels:
    name: verisphere
    app: verisphere-misinformation-detection
